--- a/Source/ToDo.txt
+++ b/Source/ToDo.txt
@@ -7,6 +7,7 @@
   - Verify implementation
   - Clean out slider junk (move to settings menu?)
 - WaveFrom display
+- Log scale of vertical axis
 - Background audio rendering
 - Look and feel
 - Clean up all the dimensions in MainComponent
