--- a/Source/ToDo.txt
+++ b/Source/ToDo.txt
@@ -1,6 +1,7 @@
 - Undo function
 - rectangular copy and paste tool
 - Save/load
+- Fix sample rate issues (it's hardcoded to 44100)
 - Continuity of drawing
   - Moving applying brushes to background thread
   - real-time drawing
